2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix for 32 bits perl

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ammessage.c: Fix for errno in message
	* installcheck/Amanda_Rest_Services_senddiscover_amgtar.pl,
	  installcheck/Amanda_Rest_Amcheck.pl: Fix
	* man/xml-source/amssl.8.xml: Improve documentation

2016-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amutil.c: Fix for automatic test

2016-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c, common-src/amutil.c,
	  xfer-src/xfer-test.c: Fix bug found by coverity

2016-02-01  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: Fix small memory leak

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/amanda_configure.m4: Invoke AMANDA_PROG_READLINK
	* config/amanda/dumpers.m4: use READLINK if REALPATH is not available
	* config/amanda/progs.m4: Find readlink

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/make_security_file.c: Print '='

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* Improve reporting of security message

2016-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.9
	* ReleaseNotes: Change in 3.3.9

2016-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec.src: Use 'mkdirp -p'

2016-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (EXTRA_DIST): Remove
	* recover-src/Makefile.am (EXTRA_DIST): Add uscan.c

2016-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: s/g_strcmp0/strcmp/
	* man/xml-source/amanda.8.xml: Add amanda-security.conf

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (EXTRA_DIST): Add make_security_file.c
	* common-src/make_security_file.c: Typo

2016-01-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: Fix security